objects/Location__c.object
<CustomObject>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <length>2</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Postal_Code_From__c</fullName>
        <label>Postal Code From</label>
        <length>10</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Postal_Code_To__c</fullName>
        <label>Postal Code To</label>
        <length>10</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Team__c</fullName>
        <label>Team</label>
        <referenceTo>Team__c</referenceTo>
        <relationshipLabel>Locations</relationshipLabel>
        <relationshipName>Locations</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Location</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Country__c</columns>
        <columns>Postal_Code_From__c</columns>
        <columns>Postal_Code_To__c</columns>
        <columns>Team__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>L-{0}</displayFormat>
        <label>Location Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Locations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>